<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream_white"
    android:padding="12dp">


    <TextView
        android:id="@+id/conditional_text_pt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/node_list_create_conditional_part1"
        app:layout_constraintBottom_toBottomOf="@id/select_conditional_operand_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/select_conditional_operand_button" />

    <Button
        android:id="@+id/select_conditional_operand_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_select_operand"
        app:layout_constraintStart_toEndOf="@id/conditional_text_pt1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/conditional_text_pt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/node_list_create_conditional_part2"
        app:layout_constraintStart_toEndOf="@id/select_conditional_operand_button"
        app:layout_constraintTop_toTopOf="@id/conditional_text_pt1" />

    <Button
        android:id="@+id/select_truth_path_operand_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_select_operand"
        app:layout_constraintStart_toStartOf="@id/select_conditional_operand_button"
        app:layout_constraintTop_toBottomOf="@id/select_conditional_operand_button" />

    <TextView
        android:id="@+id/conditional_text_pt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/node_list_create_conditional_part3"
        app:layout_constraintStart_toStartOf="@id/conditional_text_pt1"
        app:layout_constraintTop_toBottomOf="@id/select_truth_path_operand_button" />

    <Button
        android:id="@+id/select_false_path_operand_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_select_operand"
        app:layout_constraintStart_toStartOf="@id/select_truth_path_operand_button"
        app:layout_constraintTop_toBottomOf="@id/conditional_text_pt3" />

    <Button
        android:id="@+id/accept_selection_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/general_accept"
        android:textColor="@color/bright_green"
        android:translationZ="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_false_path_operand_button" />

</androidx.constraintlayout.widget.ConstraintLayout>