<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream_white"
    android:padding="12dp"
    tools:showIn="@layout/fragment_core_config">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ancestor_grid_edit_node_creation"
        android:layout_width="@dimen/grid_size_miniature"
        android:layout_height="@dimen/grid_size_miniature"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:spanCount="3"
        tools:itemCount="9"
        tools:listitem="@layout/ancestor_configuration_tile" />

    <Button
        android:id="@+id/select_operator_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_select_operator"
        app:layout_constraintBottom_toBottomOf="@id/ancestor_grid_edit_node_creation"
        app:layout_constraintStart_toEndOf="@id/ancestor_grid_edit_node_creation"
        app:layout_constraintTop_toTopOf="@id/ancestor_grid_edit_node_creation" />

    <Button
        android:id="@+id/select_operand_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_select_operand"
        app:layout_constraintBottom_toBottomOf="@id/ancestor_grid_edit_node_creation"
        app:layout_constraintStart_toEndOf="@id/select_operator_button"
        app:layout_constraintTop_toTopOf="@id/ancestor_grid_edit_node_creation" />

    <Button
        android:id="@+id/accept_selection_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/general_accept"
        android:textColor="@color/bright_green"
        android:translationZ="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_operator_button" />

</androidx.constraintlayout.widget.ConstraintLayout>